<ui version="4.0" >
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>555</width>
    <height>557</height>
   </rect>
  </property>
  <property name="acceptDrops" >
   <bool>true</bool>
  </property>
  <property name="windowTitle" >
   <string>Image Uploader</string>
  </property>
  <property name="windowIcon" >
   <iconset resource="res.qrc" >:/new/prefix1/img/icon.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget" >
   <layout class="QVBoxLayout" >
    <item>
     <widget class="QFrame" name="frame" >
      <property name="frameShape" >
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow" >
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QHBoxLayout" >
       <item>
        <widget class="QListWidget" name="imgList" >
         <property name="iconSize" >
          <size>
           <width>150</width>
           <height>150</height>
          </size>
         </property>
        </widget>
       </item>
       <item>
        <layout class="QVBoxLayout" >
         <item>
          <widget class="QPushButton" name="btnAdd" >
           <property name="text" >
            <string>Add</string>
           </property>
           <property name="icon" >
            <iconset resource="res.qrc" >:/new/prefix1/img/add.png</iconset>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btnRemove" >
           <property name="text" >
            <string>Remove</string>
           </property>
           <property name="icon" >
            <iconset resource="res.qrc" >:/new/prefix1/img/delete.png</iconset>
           </property>
          </widget>
         </item>
         <item>
          <spacer>
           <property name="orientation" >
            <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" >
            <size>
             <width>20</width>
             <height>40</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget" >
      <property name="currentIndex" >
       <number>0</number>
      </property>
      <widget class="QWidget" name="tab" >
       <attribute name="title" >
        <string>BBCode</string>
       </attribute>
       <layout class="QHBoxLayout" >
        <item>
         <widget class="QTextEdit" name="textBBCode" />
        </item>
       </layout>
      </widget>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" >
      <item>
       <widget class="QComboBox" name="comboSite" />
      </item>
      <item>
       <widget class="QPushButton" name="btnUpload" >
        <property name="text" >
         <string>Upload</string>
        </property>
        <property name="icon" >
         <iconset resource="res.qrc" >:/new/prefix1/img/upload.png</iconset>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btnCancel" >
        <property name="text" >
         <string>Cancel</string>
        </property>
        <property name="icon" >
         <iconset resource="res.qrc" >:/new/prefix1/img/cancel.png</iconset>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QLabel" name="lblTotal" >
      <property name="text" >
       <string/>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QProgressBar" name="pbTotal" >
      <property name="value" >
       <number>0</number>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="lblPartial" >
      <property name="text" >
       <string/>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QProgressBar" name="pbPartial" >
      <property name="value" >
       <number>0</number>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
     <width>555</width>
     <height>30</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar" />
 </widget>
 <resources>
  <include location="res.qrc" />
 </resources>
 <connections/>
</ui>
